# ComfyUI-Jtils

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
nodes/: Jtils.py  Service.py
web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web/comfyui/: Jtils.js
web/src/: Jtils.ts
web/src/types/: scripts.d.ts
