[project]
name = "jtils"
description = "An extension for ComfyUI that adds utility functions and nodes not available in the default setup."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/cnbjjj/ComfyUI-Jtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Jtils"
Icon = ""
